# dilder

./: .gitignore  404.html  PromptProgression.md  README.md  index.html  setup.py  sitemap.xml
DevTool/: README.md  devtool.py
ESP Protyping/: dev setup guide.md  setup wiring guide.md
ESP Protyping/dilder-esp32/: README.md  platformio.ini
ESP Protyping/dilder-esp32/src/: main.cpp  quotes.h
Gamplay Planning/: 03-emotion-engine.md  12-user-guide.md  13-feature-menus-achievements.md
about/: index.html
about/contact/: index.html
assets/: octopus-emotion-states.md  render_c_previews.py
assets/octopus/: __init__.py  asset_plan.md  compose.py  python_to_c_guide.md  render_all.py  weather_hardware_brainstorm.md
assets/octopus/aura/: __init__.py  particles.py
assets/octopus/core/: __init__.py  body.py  canvas.py  drawing.py
assets/octopus/decor/: __init__.py  electronics.py  food.py  furniture.py  plants.py  weather.py
assets/octopus/emotions/: __init__.py  faces.py  transforms.py
assets/octopus/environments/: __init__.py  arcade.py  bathroom.py  beach.py  bedroom.py  cafe.py  city_street.py  desert.py  forest.py  garden.py  gym.py  haunted_house.py  kitchen.py  library.py  living_room.py  mountain.py  office.py  park.py  rainstorm.py  rooftop.py  snow_field.py  space.py  sunset.py  underwater.py
assets/octopus/outfits/: __init__.py  accessories.py  bodywear.py  costume_headgear.py  eyewear.py  headwear.py  holiday_headwear.py  special_bodywear.py
assets/octopus/poses/: __init__.py
blog/: index.html
blog/archive/2026/: index.html
blog/asset-rendering-system/: index.html
blog/body-language-animations/: index.html
blog/breadboard-prototype-guide/: index.html
blog/c-vs-python-renderer/: index.html
blog/category/architecture/: index.html
blog/category/art/: index.html
blog/category/build-guide/: index.html
blog/category/design/: index.html
blog/category/firmware/: index.html
blog/category/hardware/: index.html
blog/category/manufacturing/: index.html
blog/category/pcb-design/: index.html
blog/category/planning/: index.html
blog/category/software/: index.html
blog/custom-pcb-research/: index.html
blog/engagement-plan/: index.html
blog/esp32-s3-pcb-design/: index.html
blog/esp32-schematic-complete/: index.html
blog/gameplay-architecture/: index.html
blog/hardware-arrives/: index.html
blog/joystick-first-input/: index.html
blog/motion-location-detection/: index.html
blog/page/2/: index.html
blog/pcb-fab-pricing-research/: index.html
blog/pcb-routing-complete/: index.html
blog/peer-discovery/: index.html
blog/phase-0-planning/: index.html
blog/phase-1-dev-tooling/: index.html
blog/phase-1-first-pixels/: index.html
blog/phase-1-hardware-begins/: index.html
blog/runtime-rendering-revolution/: index.html
blog/sassy-octopus-born/: index.html
blog/sixteen-emotions/: index.html
community/: index.html
community/discord/: index.html
community/support/: index.html
dev-setup/: Dockerfile  docker-compose.yml  pico-and-display-first-time-setup.md
dev-setup/angry-octopus/: CMakeLists.txt
dev-setup/chaotic-octopus/: CMakeLists.txt  main.c
dev-setup/chill-octopus/: CMakeLists.txt
dev-setup/conspiratorial-octopus/: CMakeLists.txt  main.c
dev-setup/creepy-octopus/: CMakeLists.txt  main.c
dev-setup/excited-octopus/: CMakeLists.txt
dev-setup/fat-octopus/: CMakeLists.txt  main.c
dev-setup/hello-world/: CMakeLists.txt  main.c
dev-setup/hello-world-serial/: CMakeLists.txt  main.c
dev-setup/homesick-octopus/: CMakeLists.txt
dev-setup/horny-octopus/: CMakeLists.txt
dev-setup/img-receiver/: CMakeLists.txt  main.c
dev-setup/joystick-mood-selector/: generate_quotes.py  main.c
dev-setup/lazy-octopus/: CMakeLists.txt  main.c
dev-setup/mood-selector/: CMakeLists.txt  main.c
dev-setup/nostalgic-octopus/: CMakeLists.txt
dev-setup/sad-octopus/: CMakeLists.txt  main.c
dev-setup/sassy-octopus/: CMakeLists.txt  frames.h  main.c
dev-setup/supportive-octopus/: CMakeLists.txt  main.c
docs/: breadboard-wiring-guide.md  esp32-s3-pcb-research.md  hardware-research.md  index.html  keyboard-to-pico-input.md  motion-location-detection.md  pcb-assembly-and-prototyping.md  peer-discovery-research.md  programs-guide.md  setup-guide.md  user-engagement-plan.md
firmware/: CMakeLists.txt  FIRMWARE.md
firmware/include/: dilder.h
firmware/include/game/: dialog.h  emotion.h  event.h  game_loop.h  game_state.h  life.h  progress.h  stat.h  time_mgr.h
firmware/include/platform/: board_config.h  hal.h
firmware/include/sensor/: sensor.h
firmware/include/ui/: input.h  render.h  ui.h
firmware/src/game/: dialog.c  emotion.c  event.c  game_loop.c  life.c  progress.c  stat.c  time_mgr.c
firmware/src/platform/desktop/: dilder_api.c  main_desktop.c
firmware/src/platform/esp32s3/: esp32s3_hal.cpp
firmware/src/sensor/: sensor.c
firmware/src/ui/: input.c  render.c  ui.c
hardware-design/: BOM.md  Measurements.md  board-design-v04.md  hardware-planning.md  pcb-design-plan.md  setup-kicad-jlcpcb.py
hardware-design/Board Design kicad/: autorouter.py  build_board.py  build_esp32s3.py  dilder-erc.rpt  dilder.kicad_pcb  dilder.kicad_prl  dilder.kicad_pro  dilder.kicad_sch  dilder.net  fix_drc.py  fp-lib-table  generate_pcb.py  generate_schematic.py  generate_schematic_v2.py  route_board.py  route_board_v2.py  route_v04.py  sym-lib-table
hardware-design/examples/: INDEX.md
hardware-design/parts-sheets/: README.md  ams1117.md  capacitors-0402.md  dw01a.md  esp32-s3-wroom1.md  fs8205a.md  jst-ph-battery.md  jst-sh-epaper.md  led-green.md  led-red.md  lis2dh12.md  resistors-0402.md  skrhabe010.md  ss34.md  tp4056.md  usb-c-connector.md
javascripts/: octopus-banner.js
prompts/: index.html
search/: search_index.json
stylesheets/: extra.css
website/: CONTENT-GUIDE.md  IMPLEMENTATION.md  PLAN.md  dev.py  mkdocs.yml  requirements.txt
website/docs/: CNAME  index.md
(+91 files in other folders)
